# headless_sidewalkreator

./: .gitignore  AGENTS.md  DEBUGGING_TIMEOUT_ISSUE.md  LICENSE  README.md  comparison_report.md  comprehensive_test_report.py  crossing_generation_spec.md  debug_crossing_analysis.py  debug_poly.py  debug_poly2.py  demo_api.py  detailed_debug.py  example_usage.py  generic_functions_headless.py  headless_prototype.py  parameters.py  patch_import.py  pyproject.toml  pytest.ini  requirements-runtime.txt  simple_debug.py  test_comprehensive_grids.py
.github/: copilot-setup-steps.yml
.github/workflows/: ci.yml  pytest.yml
data_assets/: grid_test_documentation.md  qgis_algorithm_description.md
data_assets/test_data/: polygon_3857.geojson  polygon_4326.geojson
debug/: benchmark_buffering.py  benchmark_regex.py  comprehensive_test_report.py  debug_crossing_analysis.py  detailed_debug.py  enhanced_crossing_analysis.py  performance_rationale.md  simple_debug.py  test_comprehensive_grids.py  verify_logic.py  verify_vulnerability.py
debug/benchmark/: benchmark_split_sidewalks.py
docs/: DEBUG_CROSSING_GENERATION.md
docs/source/: conf.py  index.rst
documentation/specific_descriptions/: 01_data_fetching_and_preparation.md  02_sidewalk_generation.md  03_crossing_and_kerb_generation.md  04_sidewalk_splitting_and_output.md  GUI.md
examples/: 01_full_pipeline_example.py  02_protoblock_generation_example.py  BUG_FIXES.md  IMPLEMENTATION_SUMMARY.md  README.md  demo_api.py  example_usage.py  protoblocks_example.py
examples/outputs/: .gitignore  README.md
future/: central_park_geo_ids.json  geo_id.py
headless_sidewalkreator/: __init__.py  __main__.py  full_sidewalkreator_algorithm.py  full_sidewalkreator_algorithm_old.py  generic_functions.py  logging_config.py  main.py  osm_fetch.py  parameters.py
test/: conftest.py  test_dead_end_removal.py  test_generate_sidewalks_gdf.py  test_generic_functions.py  test_geo_id.py  test_grid.py  test_headless_prototype.py  test_intersection.py  test_osm_fetch.py  test_protoblocks_generation.py  test_sidewalkreator.py
test/extra_tests/: polygon01.geojson  polygon02.geojson
test_env/: pyvenv.cfg
tools/: create_diagram.py  inspect_geojson.py
