[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sidewalkreator"
version = "0.1.0"
description = "Headless OSM Sidewalkreator - generate sidewalks from OSM data without QGIS GUI"
readme = "README.md"
authors = [ { name = "Kaue Vestena", email = "kauemv2@gmail.com" } ]
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["osm", "geopandas", "osmnx", "sidewalks", "gis", "urban_mobility_studies", "vector data"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "geopandas>=0.13",
  "osmnx>=1.4",
  "shapely>=2.0",
  "scipy>=1.10",
  "fiona>=1.9",
  "pyproj>=3.6",
  "rtree>=1.0",
  "pandas>=1.5",
  "networkx>=3.0",
]

[project.urls]
"Homepage" = "https://github.com/kauevestena/headless_sidewalkreator"
"Source" = "https://github.com/kauevestena/headless_sidewalkreator"
"Tracker" = "https://github.com/kauevestena/headless_sidewalkreator/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
sidewalkreator = "headless_sidewalkreator.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["headless_sidewalkreator"]
